codex-agent-bindings/dart/lib/src/ffi.dart

        conversationIdValue = library.lookupFunction<
                CodexCopyConversationIdNative, CodexCopyConversationIdDart>(
            'codex_agent_conversation_id_value_copy'),
        conversationCanStartTurnGet = library.lookupFunction<
                CodexGetSnapshotNative<CodexNativeConversation>,
                CodexGetSnapshotDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_start_turn_get'),
        conversationCanStartTurnSubscribe = library.lookupFunction<
                CodexSubscribeNative<CodexNativeConversation>,
                CodexSubscribeDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_start_turn_subscribe'),
        conversationCanReloadGet = library.lookupFunction<
                CodexGetSnapshotNative<CodexNativeConversation>,
                CodexGetSnapshotDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_reload_get'),
        conversationCanReloadSubscribe = library.lookupFunction<
                CodexSubscribeNative<CodexNativeConversation>,
                CodexSubscribeDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_reload_subscribe'),
        conversationCanCancelTurnGet = library.lookupFunction<
                CodexGetSnapshotNative<CodexNativeConversation>,
                CodexGetSnapshotDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_cancel_turn_get'),
        conversationCanCancelTurnSubscribe = library.lookupFunction<
                CodexSubscribeNative<CodexNativeConversation>,
                CodexSubscribeDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_cancel_turn_subscribe'),
        conversationCanRunShellGet = library.lookupFunction<
                CodexGetSnapshotNative<CodexNativeConversation>,
                CodexGetSnapshotDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_run_shell_command_get'),
        conversationCanRunShellSubscribe = library.lookupFunction<
                CodexSubscribeNative<CodexNativeConversation>,
                CodexSubscribeDart<CodexNativeConversation>>(
            'codex_agent_conversation_can_run_shell_command_subscribe'),
        conversationIsTurnActiveGet = library.lookupFunction<
                CodexGetSnapshotNative<CodexNativeConversation>,
                CodexGetSnapshotDart<CodexNativeConversation>>(
            'codex_agent_conversation_is_turn_active_get'),
        conversationIsTurnActiveSubscribe = library.lookupFunction<
                CodexSubscribeNative<CodexNativeConversation>,
                CodexSubscribeDart<CodexNativeConversation>>(
            'codex_agent_conversation_is_turn_active_subscribe');

  factory NativeApi.load(String path) {
    return NativeApi._(_authenticatedRuntime(path).library);
  }

  final DynamicLibrary library;
  final CodexAbiVersionDart abiVersion;
  final CodexAbiCompatibleDart abiCompatible;
  final CodexCreateContextDart contextCreate;
  final CodexDestroyContextDart contextDestroy;
  final CodexCreateHostDart hostCreate;
  final CodexReleaseHostDart hostRelease;
  final CodexNativeHostOperationDart hostStart;
  final CodexNativeHostOperationDart hostClose;
  final CodexNativeHostSelectWorkspaceDart hostSelectWorkspace;
  final CodexGetSnapshotDart<CodexNativeHost> hostStateGet;
  final CodexSubscribeDart<CodexNativeHost> hostStateSubscribe;
  final CodexReleaseHandleDart<CodexNativeAgent> agentRelease;
  final CodexNativeAgentConversationsDart agentConversations;
  final CodexNativeAgentWorkspaceDart agentWorkspace;
  final CodexReleaseHandleDart<CodexNativeWorkspace> workspaceDestroy;
  final CodexCopyWorkspaceStringDart workspacePath;
  final CodexCopyWorkspaceStringDart workspaceDisplayName;
  final CodexReleaseHandleDart<CodexNativeConversations> conversationsRelease;
  final CodexGetSnapshotDart<CodexNativeConversations> conversationsActiveGet;
  final CodexSubscribeDart<CodexNativeConversations>
      conversationsActiveSubscribe;
  final CodexNativeConversationsOperationDart conversationsList;
  final CodexNativeConversationsOpenDart conversationsOpen;
  final CodexReleaseHandleDart<CodexNativeConversation> conversationRelease;
  final CodexNativeConversationSameDart conversationSame;
  final CodexNativeConversationStringOperationDart conversationSend;
  final CodexNativeConversationStringOperationDart conversationShell;
  final CodexNativeConversationOperationDart conversationReload;
  final CodexNativeConversationOperationDart conversationCancelTurn;
  final CodexNativeConversationOperationDart conversationClose;
  final CodexGetSnapshotDart<CodexNativeConversation> conversationStateGet;
  final CodexSubscribeDart<CodexNativeConversation> conversationStateSubscribe;
  final CodexCancelOperationDart operationCancel;
  final CodexNativeOperationResultDart operationResult;
  final CodexNativeOperationConversationDart operationConversation;
  final CodexNativeOperationFailureDart operationFailure;
  final CodexNativeOperationCountDart operationSummariesCount;
  final CodexNativeOperationSummaryAtDart operationSummaryAt;
  final CodexReleaseHandleDart<CodexNativeOperation> operationDestroy;
  final CodexReleaseHandleDart<CodexNativeSubscription> subscriptionDestroy;
  final CodexReleaseHandleDart<CodexNativeSnapshot> snapshotDestroy;
  final CodexStateIntDart hostStateKind;
  final CodexNativeHostStateAgentDart hostStateAgent;
  final CodexStateFailureDart hostStateFailure;
  final CodexStateIntDart hostStateHasWorkspace;
  final CodexCopySnapshotStringDart hostStateWorkspacePath;
  final CodexCopySnapshotStringDart hostStateWorkspaceDisplayName;
  final CodexStateIntDart hostStateRequirementReason;
  final CodexCopySnapshotStringDart hostStateRequirementMessage;
  final CodexActiveConversationDart activeConversation;
  final CodexStateIntDart conversationStateStatus;
  final CodexStateFailureDart conversationStateFailure;
  final CodexStateIntDart stateBooleanValue;
  final CodexReleaseHandleDart<CodexNativeFailure> failureRelease;
  final CodexCopyFailureStringDart failureCode;
  final CodexCopyFailureStringDart failureMessage;
  final CodexNativeFailureRecoverableDart failureRecoverable;
  final CodexReleaseHandleDart<CodexNativeConversationSummary> summaryDestroy;
  final CodexSummaryConversationIdDart summaryConversationId;
  final CodexCopySummaryStringDart summaryTitle;
  final CodexSummaryUpdatedDart summaryUpdated;
  final CodexReleaseHandleDart<CodexNativeConversationId> conversationIdDestroy;
  final CodexCopyConversationIdDart conversationIdValue;
  final CodexGetSnapshotDart<CodexNativeConversation>
      conversationCanStartTurnGet;
  final CodexSubscribeDart<CodexNativeConversation>
      conversationCanStartTurnSubscribe;
  final CodexGetSnapshotDart<CodexNativeConversation> conversationCanReloadGet;
  final CodexSubscribeDart<CodexNativeConversation>
      conversationCanReloadSubscribe;
  final CodexGetSnapshotDart<CodexNativeConversation>
      conversationCanCancelTurnGet;
  final CodexSubscribeDart<CodexNativeConversation>
      conversationCanCancelTurnSubscribe;
  final CodexGetSnapshotDart<CodexNativeConversation>
      conversationCanRunShellGet;
  final CodexSubscribeDart<CodexNativeConversation>
      conversationCanRunShellSubscribe;
  final CodexGetSnapshotDart<CodexNativeConversation>
      conversationIsTurnActiveGet;
  final CodexSubscribeDart<CodexNativeConversation>
      conversationIsTurnActiveSubscribe;
}

final class _AuthenticatedRuntime {
  const _AuthenticatedRuntime(this.library, this.digest);

  final DynamicLibrary library;
  final String digest;
}

final _authenticatedRuntimes = <String, _AuthenticatedRuntime>{};

_AuthenticatedRuntime _authenticatedRuntime(
  String path, {
  void Function(File snapshot)? beforeDynamicOpen,
}) {
  final file = File(path);
  requireAbsoluteRegularFile(file, 'Codex Agent C SDK');
  final cached = _authenticatedRuntimes[path];
  if (cached != null) {
    if (runtimeFileSha256(file) != cached.digest) {
      throw const CodexException(
        'Codex Agent Runtime changed after authentication',
      );
    }
    return cached;
  }

  final compatibility = RuntimeCompatibility.load();
  final target = currentClassifier();
  final packagedUri = Isolate.resolvePackageUriSync(
    Uri.parse(
      'package:codex_agent/src/native/$target/${libraryNameFor(target)}',
    ),
  );
  final embedded = packagedUri != null &&
      packagedUri.scheme == 'file' &&
      File.fromUri(packagedUri).path == file.path;
  final snapshot = snapshotRuntimeLibrary(
    file,
    compatibility,
    target,
    embedded: embedded,
  );
  try {
    final library = _openProtectedRuntime(
      snapshot,
      beforeDynamicOpen: beforeDynamicOpen,
    );
    final identityAbi = compatibility.verifyRuntimeIdentity(
      readRuntimeIdentity(library),
      target,
      embedded: embedded,
    );
    late final CodexAbiVersionDart abiVersion;
    late final CodexAbiCompatibleDart abiCompatible;
    try {
      abiVersion =
          library.lookupFunction<CodexAbiVersionNative, CodexAbiVersionDart>(
        'codex_agent_abi_version',
      );
      abiCompatible = library.lookupFunction<CodexAbiCompatibleNative,
          CodexAbiCompatibleDart>('codex_agent_abi_is_compatible');
    } on Object {
      throw const CodexException('Codex Agent Runtime cannot prove its ABI');
    }
    final actual = abiVersion();
    if (actual != identityAbi ||
        (actual >> 24) != compatibility.requiredAbiMajor ||
        ((actual >> 16) & 0xff) < compatibility.minimumAbiMinor ||
        abiCompatible(requiredAbiVersion) != 1) {
      throw CodexNativeException(
        CodexStatus.unsupportedAbi.value,
        'Codex Agent C SDK ABI 1.13+ is required; loaded '
        '0x${actual.toRadixString(16).padLeft(8, '0')}',
      );
    }
    snapshot.removeAfterLoad();
    return _authenticatedRuntimes[path] =
        _AuthenticatedRuntime(library, snapshot.digest);
  } catch (_) {
    snapshot.removeAfterLoad();
    rethrow;
  }
}

DynamicLibrary authenticatedRuntimeLibraryForTesting(
  String path, {
  void Function(File snapshot)? beforeDynamicOpen,
}) =>
    _authenticatedRuntime(
      path,
      beforeDynamicOpen: beforeDynamicOpen,
    ).library;

DynamicLibrary _openProtectedRuntime(
  RuntimeLibrarySnapshot snapshot, {
  void Function(File snapshot)? beforeDynamicOpen,
}) =>
    Platform.isWindows
        ? _openProtectedWindows(snapshot, beforeDynamicOpen)
        : _openProtectedPosix(snapshot, beforeDynamicOpen);

DynamicLibrary _openProtectedPosix(
  RuntimeLibrarySnapshot snapshot,
  void Function(File snapshot)? beforeDynamicOpen,
) {
  final process = DynamicLibrary.process();
  final open = process.lookupFunction<_OpenNative, _OpenDart>('open');
  final close = process.lookupFunction<_CloseNative, _CloseDart>('close');
  final seek = process.lookupFunction<_SeekNative, _SeekDart>('lseek');
  final fstat = Platform.isMacOS
      ? process.lookupFunction<_FstatNative, _FstatDart>('fstat')
      : null;
  final stat = Platform.isMacOS
      ? process.lookupFunction<_StatNative, _StatDart>('stat')
      : null;
  final path = _nativeUtf8(snapshot.file.path);
  final noFollow = Platform.isMacOS ? 0x00000100 : 0x00020000;
  final closeOnExec = Platform.isMacOS ? 0x01000000 : 0x00080000;
  final descriptor = open(path, noFollow | closeOnExec);
  nativeMemory.free(path);
  if (descriptor < 0) {
    throw const CodexException('Codex Agent Runtime snapshot cannot be opened');
  }
  final descriptorFile = File(
    Platform.isMacOS ? '/dev/fd/$descriptor' : '/proc/self/fd/$descriptor',
  );
  void verifyDescriptor() {
    if (seek(descriptor, 0, 0) != 0) {
      throw const CodexException('Codex Agent Runtime snapshot cannot be read');
    }
    snapshot.verifyDescriptor(descriptorFile);
  }
